--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^2.1.5",
     "express": "^4.16.4",
     "hound": "^1.0.5",
+    "konva": "^3.2.4",
     "multer": "^1.4.1"
   },
   "devDependencies": {
