--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.16.4",
     "hound": "^1.0.5",
     "konva": "^3.2.4",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "xmlbuilder": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
