added nofoto img in public folder

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "nodemonConfig": {
     "ignore": [
       "img/*",
-      "src/data/*"
+      "src/data/*",
+      "public/*"
     ]
   },
   "author": "",
