--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^3.0.0",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "chokidar": "^2.1.5",
     "express": "^4.16.4",
     "hound": "^1.0.5",
-    "konva": "^3.2.4",
     "multer": "^1.4.1",
+    "path": "^0.12.7",
     "xmlbuilder": "^12.0.0"
   },
   "devDependencies": {
