--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "archiver": "^3.0.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.3.0",
     "express": "^4.16.4",
     "hound": "^1.0.5",
     "multer": "^1.4.1",
@@ -27,6 +29,10 @@
     "xmlbuilder": "^12.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "nodemon": "^1.18.11"
   }
 }
