--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "path": "^0.12.7",
     "xmlbuilder": "^12.0.0"
   },
+  "engines": {
+    "node": "8.x"
+  },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
