--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon  --inspect server.js"
+    "server": "nodemon  --inspect server.js",
+    "test": ""
   },
   "nodemonConfig": {
     "ignore": [
